<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:id="@+id/linearLayoutOuter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:gravity="end"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/firstText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/_12"
                        android:textSize="46sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/signText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/_sign"
                        android:textSize="46sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/secondText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/_9"
                        android:textSize="46sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="40dp"
                android:background="#808080"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingRight="5dp"
                android:paddingBottom="2dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>